fix datepicker bug and set correct z-indexes

--- a/src/components/DatePicker/DatePicker.module.css
+++ b/src/components/DatePicker/DatePicker.module.css
@@ -35,5 +35,5 @@
   top: 49px;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
