--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -42,7 +42,7 @@
 
 .backdrop {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   inset: 0;
   background: rgba(13, 15, 16, 0.4);
   display: flex;
