--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -47,7 +47,7 @@
 
 .dropdown {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   background: white;
 
