--- a/src/features/kanban/FiltersDropdown.module.css
+++ b/src/features/kanban/FiltersDropdown.module.css
@@ -9,7 +9,7 @@
 
   padding: 40px 30px 20px;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 
   left: 0;
   right: 0;
